# support-bot

./: .env.example  .gitignore  Procfile  README.md  dialogflow.py  pyproject.toml  requirements.txt  setup.cfg  support_bot.py  telegram_monitoring.py  tg_support_bot.py  vk_support_bot.py
dialogflow_trainer/: train_dialogflow.py
utils/: train_dialogflow.py
